--- a/client/src/components/card/card.scss
+++ b/client/src/components/card/card.scss
@@ -57,7 +57,7 @@
       font-weight: 300;
       padding: 5px;
       border-radius: 5px;
-      background-color: rgba(254, 205, 81, 0.438);
+      background-color: #daeefc;
       width: max-content;
     }
 
