--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -86,7 +86,7 @@ nav {
 
       .profile{
         padding: 12px 24px;
-        background-color: #fece51;
+        background-color: #F1AB02;
         cursor: pointer;
         border: none;
         position: relative;
@@ -109,7 +109,7 @@ nav {
     }
 
     .register {
-      background-color: #fece51;
+      background-color: #F1AB02;
     }
 
     .menuIcon {
