--- a/client/src/routes/homePage/homePage.scss
+++ b/client/src/routes/homePage/homePage.scss
@@ -76,7 +76,7 @@
   .imgContainer {
     flex: 2;
     background-color: #fcf5f3;
-    position: relative;
+    //position: relative;
     display: flex;
     align-items: center;
 
@@ -85,9 +85,9 @@
     }
 
     img {
-      width: 115%;
-      position: absolute;
-      right: 0;
+      width: 120%;
+      position: relative;
+      left: -55px;
 
       @include lg {
         width: 105%;
