--- a/client/src/routes/newPostPage/newPostPage.scss
+++ b/client/src/routes/newPostPage/newPostPage.scss
@@ -46,12 +46,17 @@
         }
         .sendButton {
           width: 30%;
+          height: 50px;
           border-radius: 5px;
           border: none;
-          background-color: teal;
+          background-color: #093250;
           color: white;
           font-weight: bold;
           cursor: pointer;
+
+          &:hover{
+            background-color: #0d456d;
+          }
         }
       }
     }
