--- a/client/src/routes/profilePage/profilePage.scss
+++ b/client/src/routes/profilePage/profilePage.scss
@@ -54,12 +54,16 @@
         }
         button{
           width: 100px;
-          background-color: teal;
+          background-color: #093250;
           border: none;
           color: white;
           padding: 10px 20px;
           cursor: pointer;
           border-radius: 5px;
+
+          &:hover{
+            background-color: #0d456d;
+          }
         }
 
         img{
