--- a/client/src/routes/singlePage/singlePage.scss
+++ b/client/src/routes/singlePage/singlePage.scss
@@ -102,7 +102,7 @@
   }
   .features {
     flex: 2;
-    background-color: #fcf5f3;
+    background-color: #f5f5f5;
     height: 100%;
     overflow-y: scroll;
 
