--- a/client/src/routes/homePage/homePage.scss
+++ b/client/src/routes/homePage/homePage.scss
@@ -75,7 +75,7 @@
 
   .imgContainer {
     flex: 2;
-    background-color: #fcf5f3;
+    background-color: #f5f5f5;
     //position: relative;
     display: flex;
     align-items: center;
