--- a/client/src/routes/newPostPage/newPostPage.scss
+++ b/client/src/routes/newPostPage/newPostPage.scss
@@ -64,7 +64,7 @@
 
   .sideContainer {
     flex: 2;
-    background-color: #fcf5f3;
+    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     gap: 20px;
