--- a/client/src/routes/profileUpdatePage/profileUpdatePage.scss
+++ b/client/src/routes/profileUpdatePage/profileUpdatePage.scss
@@ -30,17 +30,21 @@
         padding: 20px;
         border-radius: 5px;
         border: none;
-        background-color: teal;
+        background-color: #093250;
         color: white;
         font-weight: bold;
         cursor: pointer;
+
+        &:hover{
+          background-color: #0d456d;
+        }
       }
     }
   }
 
   .sideContainer {
     flex: 2;
-    background-color: #fcf5f3;
+    background-color: #f5f5f5;
     display: flex;
     flex-direction: column;
     gap: 20px;
