--- a/client/src/components/filter/filter.scss
+++ b/client/src/components/filter/filter.scss
@@ -46,8 +46,13 @@
       padding: 10px;
       border: none;
       cursor: pointer;
-      border-radius: 50px;
-      background-color: #F1AB02;
+      //border-radius: 50px;
+      background-color: #093250;
+      color: white;
+      border-radius: 5px;
+      &:hover{
+        background-color: #0d456d;
+      }
 
       img {
         width: 24px;
