--- a/client/src/components/uploadWidget/uploadWidget.scss
+++ b/client/src/components/uploadWidget/uploadWidget.scss
@@ -1,9 +1,9 @@
 .custom-button {
-    background-color: #093250; /* Replace with your desired color */
+    background-color: #093250 !important;
     color: white;
   }
   
   .custom-button:hover {
-    background-color: #0d456d; /* Replace with a darker shade for hover */
+    background-color: #0d456d !important; 
   }
   
