--- a/client/src/routes/singlePage/singlePage.scss
+++ b/client/src/routes/singlePage/singlePage.scss
@@ -77,7 +77,7 @@
             gap: 20px;
             padding: 0px 50px;
             border-radius: 10px;
-            background-color: #daeefc;
+            background-color: #f5f5f5;
             font-weight: 600;
 
             @include sm {
