--- a/client/src/components/chat/chat.scss
+++ b/client/src/components/chat/chat.scss
@@ -44,7 +44,9 @@
     justify-content: space-between;
 
     .top {
-      background-color: #f7c14b85;
+      background-color: #eef8ff;
+      border:1px solid #093250;;
+      border-radius: 10px 10px 0 0;
       padding: 20px;
       font-weight: bold;
       display: flex;
@@ -76,7 +78,7 @@
       gap: 20px;
 
       .chatMessage{
-        width: 50%;
+        width: 75%;
 
         &.own{
           align-self: flex-end;
@@ -84,15 +86,20 @@
         }
 
         span{
-          font-size: 12px;
-          background-color: #f7c14b39;
-          padding: 2px;
-          border-radius: 5px;
+          font-size: 11px;
+          color:darkgray
+        }
+        p{
+          background-color: #f5f5f5;
+          border-radius: 15px;
+          padding: 10px;
         }
       }
     }
     .bottom {
-      border-top: 2px solid #f7c14b85;
+      border: 2px solid #093250;
+      border-radius: 10px;
+      margin: 10px;
       height: 60px;
       display: flex;
       align-items: center;
@@ -102,15 +109,23 @@
         flex:3;
         height: 100%;
         border: none;
+        border-radius: 10px;
         padding: 20px;
       }
 
       button{
         flex:1;
-        background-color: #f7c14b85;
+        background-color: #093250;
+        color:white;
         height: 100%;
         border: none;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
         cursor: pointer;
+
+        &:hover{
+          background-color: #0d456d;
+        }
       }
     }
   }
