--- a/client/src/routes/singlePage/singlePage.scss
+++ b/client/src/routes/singlePage/singlePage.scss
@@ -149,6 +149,9 @@
           p {
             font-size: 14px;
           }
+          a{
+            color: blue;
+          }
         }
       }
 
