--- a/client/src/components/card/card.scss
+++ b/client/src/components/card/card.scss
@@ -3,21 +3,24 @@
 .card {
   display: flex;
   gap: 20px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
 
   .imageContainer {
     flex: 2;
     height: 200px;
 
     //hide the image for medium and small
-    @include md {
-      display: none;
-    }
+    //@include md {
+      //display: none;
+    //}
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      border-radius: 10px;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
     }
   }
   .textContainer {
@@ -26,6 +29,7 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 10px;
+    padding-top: 10px;
 
     img {
       width: 16px;
@@ -65,6 +69,7 @@
       display: flex;
       justify-content: space-between;
       gap: 10px;
+      padding-bottom: 10px;
 
       .features {
         display: flex;
@@ -75,7 +80,7 @@
           display: flex;
           align-items: center;
           gap: 5px;
-          background-color: whitesmoke;
+          background-color: rgb(223, 221, 221);
           padding: 5px;
           border-radius: 5px;
         }
