--- a/client/src/components/filter/filter.scss
+++ b/client/src/components/filter/filter.scss
@@ -1,7 +1,13 @@
+@import "../../responsive.scss";
+
 .filter {
   display: flex;
   flex-direction: column;
   gap: 10px;
+
+  @include md {
+    //width: 90%;
+  }
 
   h1 {
     font-weight: 300;
@@ -24,6 +30,10 @@
       border: 1px solid #e0e0e0;
       border-radius: 5px;
       font-size: 14px;
+
+      @include sm {
+        width:60px;
+      }
     }
   }
 
@@ -39,6 +49,9 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
+    @include md {
+      gap: 5px;
+    }
 
     button {
       width: 50px;
