--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -118,7 +118,7 @@ nav {
 
     .menuIcon {
       display: none;
-      z-index: 999;
+      z-index: 9999999;
 
       img {
         width: 36px;
@@ -135,8 +135,8 @@ nav {
       position: absolute;
       top: 0;
       right: -50%;
-      background-color: black;
-      color: white;
+      background-color: rgb(224, 222, 222);
+      color: black;
       height: 100vh;
       width: 50%;
       transition: all 1s ease;
